--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,13 @@
-.panda-bg-info{
+.panda-bg-info {
     background-color: #fceae8;
 }
-.categories img{
+
+.categories img {
     width: 100px;
 }
-.panda-btn-buy-now{
+
+.panda-btn-buy-now,
+.submit-btn {
     background-image: linear-gradient(to bottom, #FF589B 0%, #FF136F 100%);
     color: #fff;
     border: none;
